<resources>
    <string name="app_name">DriveUPO</string>
    <string name="action_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="error_location">Actually this service is not available</string>
    <string name="verify">A verification email is sent to %s</string>
    <string name="error_invalid_password">Not valid password</string>
    <string name="error_field_required">Field required</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="not_registered">Not registered?</string>
    <string name="sign_up">Sign up</string>
    <string name="retrieve">Retrieve email sent</string>
    <string name="reset_email">reset email sent to %s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="open">Open:</string>
    <string name="close">Close:</string>
    <string name="remove_museum">Remove this museum?</string>
    <string name="remove_success">Successful remove</string>
    <string name="remove">Remove</string>
    <string name="title_activity_museum">MuseumActivity</string>
    <string name="name">Name</string>
    <string name="desc">Description</string>
    <string name="add_museum">Add a museum</string>
    <string name="add">Add</string>
    <string name="position">Position</string>
    <string name="time_format">hh:mm</string>
    <string name="museum_added">Museum added</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email</string>
    <string name="title_activity_room">RoomActivity</string>
    <string name="add_room">Add room</string>
    <string name="room_added">Room added</string>
    <string name="cancelled">Cancelled</string>
    <string name="image_added">Image added</string>
    <string name="object_error">A museum object must have a name,a description and an image.</string>
    <string name="decision">What do you do?</string>
    <string name="modify">Modify</string>
    <string name="museum_modified">Museum modified</string>
    <string name="room_modified">Room modified</string>
    <string name="object_modified">Object modified</string>
    <string name="object_added">Object added</string>
    <string name="title_activity_maps">Map</string>
    <string name="from">From:</string>
    <string name="start">City of start</string>
    <string name="end">City of end</string>
    <string name="seats">Number of seats</string>
    <string name="add_trip">Add trip</string>
    <string name="date_error">Please select a valid date</string>
    <string name="trip_added">Trip added</string>
    <string name="choose">Modify or remove?</string>
    <string name="trip_modified">trip_modified</string>
    <string name="trip_removed">Trip removed</string>
    <string name="title_activity_trip">TripActivity</string>
    <string name="to">To:</string>
    <string name="trip_with">Trip with:</string>
    <string name="date">Date:</string>
    <string name="show_map">Show map</string>
    <string name="modify_trip">Modify trip</string>
    <string name="joined">You joined the trip</string>
    <string name="driver_booking">You are the driver, you can\'t book your trip.</string>
    <string name="sign_out">Sign out</string>
    <string name="seats_error">You can not insert 0 available seats</string>
    <string name="joined_trip">Joined trip</string>
    <string name="cancel">Do you want to delete your booking?</string>
    <string name="booking_deleted">Booking deleted</string>
    <string name="add_error">Please compile all fields.</string>
    <string name="list_title">Joined users</string>
    <string name="insert_date">Insert date</string>
    <string name="error_choose">You can delete only your trip.</string>
</resources>
