<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/start"
        android:hint="@string/start"
        android:backgroundTint="@color/colorPrimary"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/end"
        android:hint="@string/end"
        android:backgroundTint="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">
        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="30"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:tint="@android:color/background_light"
            android:layout_height="match_parent"
            android:id="@+id/calendar"
            android:backgroundTint="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:id="@+id/date"
            android:text="@string/insert_date"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seats"
        android:hint="@string/seats"
        android:inputType="number"
        android:maxLength="1"
        android:backgroundTint="@color/colorPrimary"/>
</LinearLayout>