<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TripActivity"
    tools:showIn="@layout/activity_trip"
    android:weightSum="100"
    android:orientation="vertical"
    android:paddingHorizontal="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:weightSum="100">
        <TextView
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/trip_with"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>
        <TextView
            android:gravity="center"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:id="@+id/driver"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20">
        <TextView
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/from"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>
        <TextView
            android:gravity="center"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:id="@+id/from"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20">
        <TextView
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/to"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>
        <TextView
            android:gravity="center"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:id="@+id/to"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20">
        <TextView
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/date"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>
        <TextView
            android:gravity="center"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:id="@+id/date"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20">
        <TextView
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/seats"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>
        <TextView
            android:gravity="center"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:id="@+id/seats"/>
    </LinearLayout>
</LinearLayout>